[Update] ViewControllerにて、猫年齢入力と同時に人間年齢の換算結果を表示するように改良。

--- a/016-CatAge/Base.lproj/Main.storyboard
+++ b/016-CatAge/Base.lproj/Main.storyboard
@@ -23,6 +23,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="calc:" destination="BYZ-38-t0r" eventType="editingChanged" id="xKA-EU-5F4"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="人年齢" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aSN-4n-WFO">
                                 <rect key="frame" x="25" y="90" width="52" height="21"/>
